# Trading

./: Cargo.toml  README.md  client_holdings.json
src/: communication.rs  consumer.rs  main.rs  models.rs  order_consumer.rs  order_matcher.rs  order_processor.rs  order_status_receiver.rs  performance.rs  stock_price_consumer.rs  stock_updater.rs
src/broker/: broker.rs  client.rs  data.rs  mod.rs  portfolio.rs
src/data/: client_holdings.json  price_store.json
src/useless/: consumer2.rs  initial broker  initial kafka producer  works-onebyone-producer
