[package]
name = "TradingSide"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
chrono = "0.4.39"
rand = "0.8.5"
futures = "0.3"
tokio-stream = "0.1.17"
colored = "2.0"
uuid = { version = "1.0", features = ["v4"] }